define IdeaRepositoryInterface and define method post for registration Idea
